alert colors added; like and close icons updated; flyout styling added; xcc customize button updated; blog header and footer styled; small login background fix; header-spacing issue fixed

--- a/src/scss/app/blog.scss
+++ b/src/scss/app/blog.scss
@@ -92,3 +92,57 @@ div[dojoattachpoint="_tagSearchText"] {
 .lotusui .lconnEmpty {
   color: $light-text-color;
 }
+
+.blog.lotusui {
+  .lotusMain {
+    .lotusContent {
+      #entries {
+        .lotusInlinelist {
+          box-shadow: none;
+        }
+        .lotusPaging, .lotusSort {
+          border: none;
+          div, li, input {
+            color: $light-text-color;
+          }
+        }
+        .lotusPaging {
+          position: relative;
+          border-bottom: 1px solid $border-color;
+          border-top: 1px solid $border-color;
+          margin: 15px 0 10px;
+          .lotusLeft {
+            position: relative;
+            padding: 10px 10px 10px 0;
+            margin-top: 0 !important;
+          }
+          #blognavform {
+            clear: both;
+            padding: 0 0 15px;
+          }
+        }
+        > .lotusPaging {
+          border-top: none;
+          border-bottom: 1px solid $border-color;
+        }
+        .lotusSort {
+          margin: 0 0 10px;
+          .lotusInlinelist {
+            padding-left: 0;
+          }
+        }
+        .lotusTable {
+          tr {
+            .lotusFirstCell {
+              display: block;
+              box-shadow: 0 2px 3px rgba(0,0,0,.2),0 -1px 4px rgba(0,0,0,.2);
+              border-radius: 4px;
+              margin: 13px 2px 0 0;
+              padding: 15px 15px 20px !important;
+            }
+          }
+        }
+      }
+    }
+  }
+}
