--- a/src/scss/color-vars.example.scss
+++ b/src/scss/color-vars.example.scss
@@ -15,6 +15,8 @@ $second-color-light: #f6f6f6 !default;
 $hover-color: #e8e8e8 !default;
 $light-text-color: #636363 !default;
 $link-color: $secondary-color  !default;
+$alert-background-color: #d1050c !default;
+$alert-foreground-color: white !default;
 $header-height: 56px !default;
 $header-foreground-color: white !default;
 $header-background-color: $primary-color !default;
