--- a/src/scss/navigation.scss
+++ b/src/scss/navigation.scss
@@ -176,9 +176,6 @@
                 }
               }
             }
-            img.usersRadius {
-              margin-top: -4px;
-            }
           }
           ul {
             height: 100%;
@@ -251,13 +248,13 @@
           }
 
           #lotusBannerFlyout {
-            margin: 0 -10px 0 10px;
             #lotusBannerFlyoutLink {
-              padding: 10px;
+              height: 100%;
               .fa {
-                font-family: 'Font Awesome 5 Free';
+                @extend %fa-shared;
                 font-size: 24px;
-                line-height: 1;
+                padding: 0;
+                line-height: $header-height;
                 &.fa-th:before {
                   content: "\f00a";
                 }
